--- a/package.json
+++ b/package.json
@@ -20,11 +20,10 @@
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
+    "@biomejs/biome": "^2.0.5",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.3.4",
-    "eslint": "^9.22.0",
-    "neostandard": "^0.12.1",
     "vite": "^6.2.1"
   }
 }
