--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "test": "vitest",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
@@ -21,9 +22,12 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^2.0.5",
+    "@testing-library/react": "^16.3.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
     "@vitejs/plugin-react": "^4.3.4",
-    "vite": "^6.2.1"
+    "vite": "^6.2.1",
+    "vitest": "^3.2.4"
   }
 }
